<resources>
    <string name="app_name">HomeFood Partner</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_click_here_to">Already have an account? Click here to</string>
    <string name="sign_in">Sign In</string>
    <string name="username_or_email_id">Username or email id</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_here">SIGN UP here</string>
    <string name="enter_the_details_to_register">Enter the details to register</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="country">Country</string>
    <string name="mob_num">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="donot_have_an_account">Don\'t have an account?</string>
    <string name="do_have_an_account">Do have an account?</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="clock_timer">00:00</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="enter_the_details_to_login">Enter the details to Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_string" />
    <string name="empty">empty</string>
    <string name="search_here">Search here</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_restaurant">Edit Partner</string>
    <string name="edit_timing">Edit Timing</string>
    <string name="deliveries">Deliveries</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="ongoing">Ongoing</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="past">Past</string>
    <string name="favorites">Favorites</string>
    <string name="email_id">Email Id</string>
    <string name="save">Save</string>
    <string name="title_activity_house_detail">HouseDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="incoming_orders">Incoming Orders</string>
    <string name="delete_account">Delete Account</string>
    <string name="history">History</string>
    <string name="restaurant">Partner</string>
    <string name="add_ons">Add-ons</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="products">Product List</string>
    <string name="dishes">Dishes</string>
    <string name="add_add_ons">Add Addons</string>
    <string name="add_ons_list">Addons List</string>
    <string name="create_add_ons">Create AddOns</string>
    <string name="add_products">Add Products</string>
    <string name="add_category">Add Category</string>
    <string name="revenue">Revenue</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="yesterday">Yesterday</string>
    <string name="today_till_now">Today Till Now</string>
    <string name="total_last_week">Total Last Week</string>
    <string name="this_week_till_now">This Week Till Now</string>
    <string name="description">Description</string>
    <string name="write_description">Write Description....</string>
    <string name="status">Status</string>
    <string name="category_order">Category Order</string>
    <string name="image_upload">Image Upload</string>
    <string name="is_this_a_featured_product">Is this is a featured product?</string>
    <string name="is_this_a_selected_food_type">Is this is a selected food type?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="featured_image_upload">Featured image upload</string>
    <string name="add_product">Create Product</string>
    <string name="every_day">Everyday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="confirm">Confirm</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="is_this_a_pure_veg_restaurant">Is this is a pure veg partner?</string>
    <string name="min_amount">Min Amount</string>
    <string name="offer_in_percentage">Offer in percentage</string>
    <string name="maximum_delivery_time">Maximum Delivery Time</string>
    <string name="price">Price</string>
    <string name="order_time">Order Time</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="order_list">Order List</string>
    <string name="notes">Notes</string>
    <string name="sub_total">Sub Total</string>
    <string name="gst">Gst</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total">Total</string>
    <string name="filter_by">Filter By</string>
    <string name="delivery_person">Delivery Person</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter">Filter</string>
    <string name="calender_date">dd:mm:yyyy</string>
    <string name="country_name">Country Name</string>
    <string name="landmark">Landmark</string>
    <string name="please_enter_mail_id">Please enter mail id</string>
    <string name="please_enter_valid_mail_id">Please enter valid mail id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_minimum_length_password">Please enter atleast 6 characters in password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_phone_number">Please enter valid phone number</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_and_confirm_password_doesnot_match">Password and Confirm Password doesn\'t match!</string>
    <string name="please_fill_your_address">Please fill your address</string>
    <string name="please_enter_amount">Please enter minimum amount</string>
    <string name="please_enter_delievery_time">Please enter maximum delievery time</string>
    <string name="please_enter_landmark">Please enter landmark</string>
    <string name="please_select_status">Please select status</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="oops_no_internet">Oops! No internet connection</string>
    <string name="tax">Tax</string>
    <string name="discount">Promocode Amount</string>
    <string name="shop_discount">Shop Discount</string>
    <string name="addon_">%s(%d x %s)</string>
    <string name="product_">%s(%d x %s)</string>
    <string name="order_delivery_time_description">Enter the order preparation time ?</string>
    <string name="order_delivery_time">Order delivery time</string>
    <string name="okay">Okay</string>
    <string name="please_enter_delivery_time">Please enter delivery time</string>
    <string name="order_ready_time">Order Ready Time must be greater than or equal-to 3 min</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>
    <string name="are_you_sure_want_to_cancel_the_order">Are you sure want to canel the order?</string>
    <string name="please_enter_addons_name">Please enter Addons name</string>
    <string name="addons_added_successfully">Addons added Successfully</string>
    <string name="addons_updated_successfully">Addons updated Successfully</string>
    <string name="are_you_sure_want_to_delete_addon">Are you sure want to delete this addon?</string>
    <string name="are_you_sure_want_to_delete_category">Are you sure want to delete this category?</string>
    <string name="are_you_sure_want_to_delete_product">Are you sure want to delete this product?</string>
    <string name="update_add_ons">Update AddOns</string>
    <string name="please_select_avatar">Please select avatar</string>
    <string name="please_enter_all_fields">Pleae enter all fields</string>
    <string name="invalid_open_time">Please select open time</string>
    <string name="invalid_close_time">Please select close time</string>
    <string name="cuisine">Cuisine</string>
    <string name="invalid_cuisine">Please select cuisine</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="enable">Enabled</string>
    <string name="disable">Disabled</string>
    <string name="dispute_created">Dispute Created</string>
    <string name="status_active">Active</string>
    <string name="status_onboarding">OnBoarding</string>
    <string name="status_banned">Banned</string>
    <string name="splash_tomoeats_partner">TOMOEATS\nPartner</string>
    <string name="restaurant_updated_successfully">Partner Updated Successfully</string>
    <string name="password_updated_successfully">Password Updated Successfully</string>
    <string name="restaurant_timing_updated_successfully">Partner Timing Updated Successfully</string>
    <string name="action_save">Save</string>
    <string name="select_delievery_person">Select Delivery Person</string>
    <string name="item_order_price">Price</string>
    <string name="currency_value">$</string>
    <string name="currency_value_tag">$ </string>
    <string name="schedule_at">Scheduled at : </string>
    <string name="schedule_at_format">Scheduled at : %1$s %2$s %3$d</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="order_pickedup">Order Pickedup</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="description_1">We have received your order.</string>
    <string name="description_2">Your order has been confirmed.</string>
    <string name="description_3">Your food is getting cooked.</string>
    <string name="description_4">Your food is on its way.</string>
    <string name="description_5">Enjoy your meal.</string>
    <string name="error_msg_product_name">Please enter product name</string>
    <string name="error_msg_product_description">Please enter product description</string>
    <string name="error_msg_product_order">Please enter product order</string>
    <string name="error_msg_product_category">Please select category</string>
    <string name="error_msg_selected_food_type">Please select food type</string>
    <string name="product_select_catefory">Select Category</string>
    <string name="shop_banner">Shop Banner Image</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="email_address">Email Address</string>
</resources>