<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="18sp"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/medium_grey" />

    <TextView
        android:id="@+id/tvActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_active"
        android:padding="@dimen/_10sdp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/status_onboarding"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvBanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/status_banned"
        android:textSize="16sp" />

</LinearLayout>
