<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfe"
    tools:context=".activity.LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_lay"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorTheme"
                android:src="@drawable/logo_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium"
                android:visibility="gone" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/enter_the_details_to_login"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corner_bg"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/edit_text_rounded_corner_bg"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_size"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textWebPassword"
                    android:padding="@dimen/_4sdp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_medium" />

                <ImageView
                    android:id="@+id/et_password_eye_img"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_eye_open"
                    android:tint="@color/grey" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:gravity="center"
                android:padding="@dimen/activity_vertical_margin_half"
                android:text="@string/forgot_password"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottom_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/donot_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_4sdp"
                android:paddingLeft="@dimen/_4sdp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/text_tiny" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
