<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfdfe"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/logo_app" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/enter_the_details_to_login"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/text_medium"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/enter_email_id"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_size"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/edit_text_rounded_corner_bg"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_medium" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/rounded_button"
            android:text="@string/next"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/donot_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_tiny" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_4sdp"
                android:paddingLeft="@dimen/_4sdp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/text_tiny" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
